<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/show_all"
        android:title="@string/show_all_fields"
        app:showAsAction="never" />
    <item
        android:id="@+id/show_events"
        android:title="@string/show_events_today"
        app:showAsAction="never" />
    <item
        android:id="@+id/reload_events"
        android:title="@string/reload_events"
        app:showAsAction="never" />
    <item
        android:id="@+id/my_joined_events"
        android:title="@string/my_joined_events"
        app:showAsAction="never" />
    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        app:showAsAction="never" />

</menu>