<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fooy"
    tools:context=".AddEvent"
    android:id="@+id/addEvent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.FootballFinder.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.FootballFinder.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <EditText
        android:id="@+id/descriptionInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="305dp"
        android:background="@drawable/inputs"
        android:ems="10"
        android:inputType="textLongMessage"
        android:minHeight="48dp"
        android:hint="@string/description"
        android:textColorHint="#616161"
        android:textAlignment="center"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/maxParticipantsInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="175dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="305dp"
        android:background="@drawable/inputs"
        android:ems="10"
        android:hint="@string/max_participant"
        android:textColorHint="#616161"
        android:inputType="number"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/playTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="305dp"
        android:background="@drawable/inputs"
        android:inputType="number"
        android:ems="10"
        android:minHeight="48dp"
        android:hint="@string/play_time"
        android:textColorHint="#616161"
        android:textAlignment="center"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/in_date"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="125dp"
        android:layout_marginTop="325dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="305dp"
        android:background="@drawable/inputs"
        android:text=""
        android:textAlignment="center"
        android:textColor="#000000" />

    <Button
        android:id="@+id/btn_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/in_date"
        android:layout_marginStart="130dp"
        android:layout_marginTop="350dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="305dp"
        android:layout_toEndOf="@+id/in_date"
        android:layout_toRightOf="@+id/in_date"
        android:text="SELECT DATE"
        app:iconTint="#FFFFFF" />

    <TextView
        android:id="@+id/in_time"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/in_date"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="120dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="305dp"
        android:background="@drawable/inputs"
        android:text=""
        android:textAlignment="center"
        android:textColor="#000000" />

    <Button
        android:id="@+id/btn_time"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@+id/btn_date"
        android:layout_alignStart="@+id/btn_date"
        android:layout_alignLeft="@+id/btn_date"
        android:layout_marginStart="130dp"
        android:layout_marginTop="425dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="305dp"
        android:text="SELECT TIME"
        app:iconTint="#FFFFFF" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="16dp"
        app:srcCompat="@android:drawable/ic_input_add"
        android:contentDescription="@string/add" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>